<resources>
    <string name="app_name">Man<small>in</small>Work</string>
    <string name="action_settings">Settings</string>
    <string name="action_delete">Delete</string>
    <string name="title_activity_company" translatable="false">CompanyActivity</string>
    <string name="title_activity_labor" translatable="false">LaborActivity</string>
    <string name="title_activity_payroll" translatable="false">PayrollActivity</string>
    <string name="title_activity_transaction" translatable="false">TransactionActivity</string>
    <string name="WebOAuthClientID" translatable="false">926738304015-crjtkm1g0cpm4vu31olic504ohv67qut.apps.googleusercontent.com</string>
    <string name="maninwork_ad01" translatable="false">ca-app-pub-7142837732503760/6493497776</string>
    <string name="maninwork_ad02" translatable="false">ca-app-pub-7142837732503760/7970230972</string>
    <string name="lbl_longtext" translatable="false"><b><i>ManinWork</i></b> is a labor work management app.
                    Register labours by customers and
                    control working hours and payments for the labor.</string>
    <string name="loading" translatable="false">loading...</string>
    <string name="lbl_delete">Delete</string>
    <string name="lbl_update">update</string>
    <string name="lbl_add">Add</string>
    <string name="lbl_clear">Clear</string>
    <string name="lbl_labor_info">Labor information</string>
    <string name="lbl_company_info">Company information</string>
    <string name="add">Add...</string>
    <string name="candel" translatable="false">Candel</string>
    <string name="lbl_cancel">Cancel</string>
    <string name="hdr_company">Company</string>
    <string name="hdr_ym">YM</string>
    <string name="hdr_name">Name</string>
    <string name="hdr_basedays">BaseDays</string>
    <string name="hdr_transit">Transit</string>
    <string name="hdr_transport">Transport</string>
    <string name="hdr_paybase">PayBase</string>
    <string name="hdr_payperhour">PayHour</string>
    <string name="hdr_payperday">PayDay</string>
    <string name="hdr_jc">JuCh</string>
    <string name="hdr_yg">YuGp</string>
    <string name="hdr_daytotal">Total</string>
    <string name="hdr_days">Days</string>
    <string name="hdr_hour">Hour</string>
    <string name="hdr_amount">Amt</string>
    <string name="hdr_overtime">Overtime</string>
    <string name="hdr_special">Special</string>
    <string name="hdr_spover">SpecialOver</string>
    <string name="hdr_night">Night</string>
    <string name="hdr_lateearly">LateEarly</string>
    <string name="hdr_bonus">Bonus</string>
    <string name="hdr_paytotal">PayTotal</string>
    <string name="hdr_deduction">Deductions</string>
    <string name="hdr_incomtax">TaxIncome</string>
    <string name="hdr_taxresidant">TaxResi</string>
    <string name="hdr_taxpension">Pension</string>
    <string name="hdr_medi">Medicare</string>
    <string name="hdr_medilong">Med10</string>
    <string name="hdr_standard">Regular</string>
    <string name="hdr_insu_employ">InsuEmp</string>
    <string name="hdr_insu_hurt">InsuHurt</string>
    <string name="hdr_prepayed">PrePay</string>
    <string name="hdr_paynet">NetPay</string>
    <string name="lbl_welcome" translatable="false">Welcome</string>
    <string name="lbl_appsubject">Manage the labor work time</string>
    <string name="lbl_okproceed" translatable="false">OK to proceed</string>
    <string name="lbl_mon">MON</string>
    <string name="lbl_tue">TUE</string>
    <string name="lbl_wed">WED</string>
    <string name="lbl_thu">THU</string>
    <string name="lbl_fri">FRI</string>
    <string name="lbl_sat">SAT</string>
    <string name="lbl_sun">SUN</string>
    <string name="lbl_editlabor">Edit Labor</string>
    <string name="lbl_payroll">Payroll</string>
    <string name="lbl_phonecall">PhoneCall</string>
    <string name="lbl_sendsms">Send SMS</string>
    <string name="lbl_sendmail">Send Mail</string>
    <string name="lbl_sendkakao">Send Kakao</string>
    <string name="lbl_share">Share</string>
    <string name="lbl_print">Print</string>
    <string name="lbl_wtimetransaction">Work Time Transaction</string>
    <string name="lbl_wtimelabor">Work Time Labor</string>
    <string name="lbl_upsert">Add/Update</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_laborname">Labor name</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_company">Company</string>
    <string name="lbl_mobile">Mobile</string>
    <string name="lbl_family">Family</string>
    <string name="lbl_child">Child</string>
    <string name="lbl_workdays">Workdays</string>
    <string name="lbl_pay">Pay</string>
    <string name="lbl_regdate">Reg.Date</string>
    <string name="lbl_rep">Rep.</string>
    <string name="lbl_payperhour">PayPerHour</string>
    <string name="lbl_paydays">PayDays</string>
    <string name="lbl_transport">Transport</string>
    <string name="lbl_transit">Transit</string>
    <string name="lbl_bonusrate">BonusRate</string>
    <string name="lbl_percent" translatable="false">%</string>
    <string name="lbl_address">Address</string>
    <string name="lbl_payrollsummary">Payroll Summary</string>
    <string name="lbl_companyname">Company Name</string>
    <string name="lbl_maninwork" translatable="false">Man in Work</string>
    <string name="lbl_signout">Sign Out</string>
    <string name="lbl_disconnect" translatable="false">Disconnect</string>
    <string name="lbl_signoutdisconn">SignOutDisconnect</string>
    <string name="lbl_version" translatable="false">Version</string>
    <string name="lbl_skip">Skip</string>
    <string name="lbl_basepay">BasePay</string>
    <string name="lbl_labor">Labor</string>
    <string name="lbl_workym">WorkYM</string>
    <string name="lbl_date">Date</string>
    <string name="lbl_weekday">WeekDay</string>
    <string name="lbl_starttime">StartTime</string>
    <string name="lbl_endtime">EndTime</string>
    <string name="lbl_work_std">Work Std</string>
    <string name="lbl_work_jc">Work jc</string>
    <string name="lbl_work_yg">Work yg</string>
    <string name="lbl_work_over">Work overtime</string>
    <string name="lbl_work_spc">Work spc</string>
    <string name="lbl_work_spcover">Work spcover</string>
    <string name="lbl_work_night">Work night</string>
    <string name="lbl_work_latear">Work lateearly</string>
    <string name="left" translatable="false">Left</string>
    <string name="lbl_left" translatable="false">Left</string>
    <string name="lbl_right" translatable="false">Right</string>
    <string name="lbl_editcompany">Edit company...</string>
    <string name="lbl_searchlabor">Search Labor</string>
    <string name="lbl_currentstatus">Current Status</string>
    <string name="lbl_payinfo">PayInfos.</string>
    <string name="lbl_googlesigninsuccess">Google Signed in successfully</string>
    <string name="lbl_basedays">BaseDays</string>
    <string name="msg_radio_acom">If checked, add %s hrs to all labors in <b>this company</b></string>
    <string name="msg_radio_allcom">If checked, add %s hrs to all labors in <b>all company</b></string>

</resources>
