<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.nwsoft.maninwork.MainActivity">
    <item
        android:id="@+id/menu_edit"
        android:title="@string/lbl_editlabor"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/menu_payroll"
        android:title="@string/lbl_payroll"
        android:orderInCategory="110"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/menu_phone"
        android:title="@string/lbl_phonecall"
        android:orderInCategory="120"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/menu_sms"
        android:title="@string/lbl_sendsms"
        android:orderInCategory="130"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/menu_mailto"
        android:title="@string/lbl_sendmail"
        android:orderInCategory="140"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/menu_kakao"
        android:title="@string/lbl_sendkakao"
        android:orderInCategory="150"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/menu_share"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/lbl_share"
        android:orderInCategory="160"
        app:showAsAction="always"/>
    <item android:id="@+id/menu_print"
        android:title="@string/lbl_print"
        android:orderInCategory="170"
        app:showAsAction="ifRoom"/>
</menu>
