<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/lo_row_transaction">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lo_line1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_tid"
            android:gravity="start" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_tr01"
            android:layout_weight="1"
            android:hint="@string/lbl_weekday" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_tr02"
            android:layout_weight="1"
            android:gravity="end"
            android:hint="@string/lbl_starttime" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_tr03"
            android:layout_weight="1"
            android:gravity="end"
            android:hint="@string/lbl_endtime" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_etc"
            android:gravity="end" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lo_line2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_tr11"
            android:layout_weight="1"
            android:hint="@string/lbl_work_std" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_tr12"
            android:layout_weight="1"
            android:hint="@string/lbl_work_jc" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_tr13"
            android:layout_weight="1"
            android:hint="@string/lbl_work_yg" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_tr14"
            android:layout_weight="1"
            android:gravity="end"
            android:hint="@string/lbl_work_over" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lo_line3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="26dp"
            android:id="@+id/txt_tr21"
            android:layout_marginRight="40dp"
            android:hint="@string/lbl_work_spc" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_tr22"
            android:layout_weight="1"
            android:hint="@string/lbl_work_spcover" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_tr23"
            android:layout_weight="1"
            android:hint="@string/lbl_work_night" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_tr24"
            android:layout_weight="1"
            android:gravity="end"
            android:hint="@string/lbl_work_latear" />
    </LinearLayout>

</LinearLayout>